--- a/My pubs.bib
+++ b/My pubs.bib
@@ -16,3 +16,18 @@
 	pages = {225--240},
 	file = {2022_Jancic et al_2022_Chelonia Adriatic.pdf:C\:\\Users\\MaticFAMNIT\\Zotero\\storage\\LCIMD4DN\\2022_Jancic et al_2022_Chelonia Adriatic.pdf:application/pdf},
 }
+
+@article{glasnovic_areography_2023,
+	title = {Areography, environmental heterogeneity and spatial models explain patterns of past and present diversity in {Edraianthus} ({Campanulaceae})},
+	issn = {0024-4074},
+	url = {https://doi.org/10.1093/botlinnean/boac079},
+	doi = {10.1093/botlinnean/boac079},
+	abstract = {This paper aims to shed light on distribution patterns and the relationship between species diversity and environmental heterogeneity of 17 Edraianthus taxa. We examined present and past distributions (Last Glacial Maximum) by applying ecological niche modelling. The environmental space occupied by the taxa was analysed using niche comparison methods. The results support the idea that the central and southern Dinaric Alps represent a centre of diversity and endemism in the western Balkan Peninsula. Diversity in Edraianthus is best explained by topographic (slope) and bioclimatic predictors (maximum temperature of warmest month, precipitation seasonality, precipitation of warmest quarter, precipitation of coldest quarter), suggesting that mountain areas with the most diversified relief have higher diversity. Niche modelling results suggest considerable range dynamics during the climatically unstable Quaternary. Thermophilic and lowland taxa responded with longitudinal shifts to ecologically suitable areas farther south, whereas high-mountain taxa responded mainly with elevational shifts. The greatest niche similarity is found among phylogenetically closely related taxa and among ecologically similar and often sympatric taxa. The least similarity was observed in species with marked differences in habitat elevation and in more geographically isolated species. Our results suggest that the extent of range and niche overlap varied among some taxa throughout their evolutionary history, which may have led to diversification at both allopatric and sympatric levels. The correlation between the genetic diversity of the most widespread taxon and the richness of taxa could be a consequence of past and present contacts. On the other hand, alternate periods of isolation may have favoured the emergence of taxa that are reproductively isolated and ecologically specialized.},
+	urldate = {2023-02-16},
+	journal = {Botanical Journal of the Linnean Society},
+	author = {Glasnović, Peter and Fišer, Živa and Jančič, Matic and Balant, Manica and Surina, Boštjan},
+	month = feb,
+	year = {2023},
+	pages = {boac079},
+	file = {Snapshot:C\:\\Users\\MaticFAMNIT\\Zotero\\storage\\66DLWIHP\\7040552.html:text/html},
+}
