final corrections GIS SI lab4

--- a/about.qmd
+++ b/about.qmd
@@ -25,4 +25,4 @@ at master study programme [Nature Conservation](https://www.famnit.upr.si/en/edu
 at bachelor study programme [Conservation biology](https://www.famnit.upr.si/en/education/undergraduate/conservation-biology).
 
 I finished master studies of Nature Conservation in 2015 (University of Primorska, Slovenia) and bachelor
-studies of Ecology and Nature Conservation in 2012 (University of Maribor, Slovenia). Currently I am a PhD student formally enroled in University of Ljubljana, Slovenia) with the dissertation title **Spatial ecology and conservation of loggerhead sea turtles in Adriatic sea** under supervision of Assoc. Prof. Bojan Lazar (UP) and Assist. Prof. Tomaž Skrbinšek (UL).
+studies of Ecology and Nature Conservation in 2012 (University of Maribor, Slovenia). Currently I am a PhD student formally enrolled at University of Ljubljana, Slovenia, with the dissertation title **Spatial ecology and conservation of loggerhead sea turtles in Adriatic sea** under supervision of Assoc. Prof. Bojan Lazar (UP) and Assist. Prof. Tomaž Skrbinšek (UL).
